# xmasdemo2021

./: CMakeLists.txt  README.TXT
assets/: sponge.glb  teapot.glb  torusknot01.glb  torusknot03.glb  twistedtorus.glb  xmastree.glb
sources/: akinomodels.c  akinomodels.h  akinorandom.c  akinorandom.h  akinotext.c  akinotext.h  main.c  resources.aps  resources.rc  run_demo_mac  screw.c  screw.h  stars.c  stars.h
